testdata/baselines/reference/submodule/compiler/jsxHasLiteralType.errors.txt
jsxHasLiteralType.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsxHasLiteralType.tsx (1 errors) ====
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface Props {
        x?: "a" | "b";
    }
    class MyComponent<P extends Props = Props> extends React.Component<P, {}> {}
    const m = <MyComponent x="a"/>
    